gts-macros/tests/compile_fail/base_true_multi_segment.stderr
error: struct_to_gts_schema: 'base = true' but schema_id 'gts.x.core.events.type.v1~x.core.audit.event.v1~' has 2 segments. A base type must have exactly 1 segment (no parent). Either use 'base = ParentStruct' or fix the schema_id.
  --> tests/compile_fail/base_true_multi_segment.rs:13:12
   |
13 | pub struct InvalidBaseV1 {
   |            ^^^^^^^^^^^^^
